syntax = "proto3";
package messages;
option csharp_namespace = "Messages";

message PidInfo { string address = 1; string id = 2; }

message EmptyMessage {}
message MessageWithPID { PidInfo senderPID = 1; }

message TriggerSendEmptyMsgTo { PidInfo targetPID = 1; }
message TriggerSendMsgWithPIDTo { PidInfo targetPID = 1; }

